--- a/QlikPortal/index.html
+++ b/QlikPortal/index.html
@@ -8,7 +8,7 @@
 
 <frameset rows="35,*" frameborder="no" border="0" framespacing="0">
   <frame src="tabs.html" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame" />
-  <frame src="http://aarswnxt01.2cchange.local/hub/my/work" name="mainFrame" id="mainFrame" title="mainFrame" />
+  <frame src="http://##SENSE_SERVER_ADDRESS##/hub/my/work" name="mainFrame" id="mainFrame" title="mainFrame" />
 </frameset>
 <noframes><body>
 </body>
